location set  to 7,00 with search

--- a/main.css
+++ b/main.css
@@ -1,13 +1,70 @@
-*{
-    margin:0px;
-    padding:0px;
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Tahoma;
 }
 
-#map{
-    height: 500px;
-    width: 100%;
-    margin: 5px;
-    border:1px solid red;
+h1 {
+    text-align: center;
+    margin: 10px auto;
+    padding: 10px;
+}
+
+#map {
+    min-height: 500px;
+    width: 99%;
+    margin:.5em;
+    border: 1px solid red;
     border-radius: 3px;
-    
+
+}
+
+
+
+#infowindow-content .title {
+    font-weight: bold;
+}
+
+#infowindow-content {
+    display: none;
+}
+
+#map #infowindow-content {
+    display: inline;
+}
+
+.pac-card {
+    width: 98.5%;
+    border-radius: 3px;
+    background-color: #fff;
+}
+
+#pac-container {
+    padding-bottom: 12px;
+    margin-right: 12px;
+}
+
+.pac-controls {
+    display: inline-block;
+    padding: 5px 11px;
+}
+
+.pac-controls label {
+    font-size: 13px;
+    font-weight: 300;
+}
+
+#pac-input {
+    background-color: #fff;
+    font-size: 15px;
+    font-weight: bold;
+    margin-left: 12px;
+    padding: 3px;
+    text-overflow: ellipsis;
+    min-width: 400px;
+    border-radius: 3px;
+}
+
+#pac-input:focus {
+    border-color: #4d90fe;
 }
