added features, styled reset button and completed the read me file

--- a/assets/main.css
+++ b/assets/main.css
@@ -6,10 +6,10 @@
 
 h1 {
     text-align: center;
-    margin: 10px auto;
+    margin: auto;
     padding: 10px;
 }
-
+/* OWN STYLING */
 #map {
     min-height: 500px;
     width: 99%;
@@ -20,6 +20,21 @@ h1 {
 }
 
 
+.btn{
+    min-width: 10em !important;
+    text-align: center;
+    padding: .2em;
+    font-weight: bold;
+    border:1px solid #000;
+}
+
+
+footer{
+    text-align: center;
+    margin-top: 25px;
+    color: #000;
+}
+/* COPIED STYLING */
 
 #infowindow-content .title {
     font-weight: bold;
@@ -61,7 +76,7 @@ h1 {
     margin-left: 12px;
     padding: 3px;
     text-overflow: ellipsis;
-    min-width: 400px;
+    min-width: 3em;
     border-radius: 3px;
 }
 
